--- a/style.css
+++ b/style.css
@@ -7,8 +7,6 @@ body {
 
 /*Navigation */
 
-
-
 /* Main Content */
 
 main {
@@ -19,9 +17,6 @@ main {
   font-family: sans-serif;
   text-align: center;
 }
-
-
-
 
 section {
   padding: 15px;
@@ -44,7 +39,6 @@ section {
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
   border: 0.5px solid black;
 }
-
 
 h2 {
   color: #212529;
@@ -153,11 +147,6 @@ p.lead {
   }
 }
 
-
-
-
-
-
 /* Order now section */
 .order-section {
   padding: 40px 20px;
@@ -168,7 +157,6 @@ p.lead {
   border-radius: 5px;
   /* width: fit-content; */
   /* margin-left: 23%; */
-
 }
 
 .order-section h2 {
@@ -205,6 +193,8 @@ p.lead {
     height: 300px;
   }
 }
+
+/* Order Form  */
 
 /* Contact  */
 
@@ -249,7 +239,6 @@ p.lead {
   }
 }
 
-
 /* Footer */
 footer {
   background-color: #212121;
@@ -286,4 +275,40 @@ footer {
   left: 50%;
   transform: translateX(-50%);
   z-index: 1000;
+}
+
+.btn-primary {
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.btn-primary:hover {
+  background-color: #0056b3;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.btn-secondary {
+  background-color: #6c757d;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.btn-secondary:hover {
+  background-color: #5a6268;
+}
+
+.my-4 {
+  margin: 1.5rem 0;
 }
