--- a/style.css
+++ b/style.css
@@ -10,13 +10,13 @@ body {
 /* Main Content */
 
 main {
-  background-color: #ffa405;
+  /* background-color: #ffa405; */
   padding: 20px;
   height: 100%;
   width: 100%;
   font-family: sans-serif;
   text-align: center;
-  /* background-image: url(240_F_1066053188_qJzLFH5MAex9UauCwthemWL2Lg8gwfE5.jpg); */
+  background-image: url(240_F_1066053188_qJzLFH5MAex9UauCwthemWL2Lg8gwfE5.jpg);
 }
 
 section {
@@ -32,11 +32,12 @@ section {
   padding: 30px;
   border-radius: 15px;
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
+  opacity: 0.7;
 }
 
 .container:hover {
-  /* background: #f8f9face; */
-  background-color: #ffa305e3;
+  background: #f8f9face;
+  /* background-color: #ffa305c1; */
 
   padding: 30px;
   border-radius: 15px;
@@ -54,6 +55,7 @@ p.lead {
   color: #555;
   font-weight: bold;
 }
+
 /* Dynamic fixed Block  */
 .fixed-effect {
   display: inline-block;
@@ -65,6 +67,7 @@ p.lead {
   font-weight: bold;
   color: #ff5722;
   line-height: 1.5em;
+  /* background-color: rgb(255, 145, 0); */
   /* border: 2px solid black; */
 }
 
@@ -85,18 +88,23 @@ p.lead {
 /* Menu  */
 /* General Container Styling */
 #menu {
-  background-color: #e5d5be;
+  /* background-color: #e5d5be; */
   /* background-color: #f9f3e5; */
-
   padding: 50px 0;
   width: 100%;
   border-radius: 15px;
+  /* opacity: 0.87;  */
+  opacity: 0.9;
 }
 
 
 #menu h2 {
   font-weight: bold;
   color: #333;
+  background-color: rgba(255, 0, 0);
+  /* background-color: #ffa405; */
+
+  display: inline;
 }
 
 #menu p {
@@ -114,19 +122,24 @@ p.lead {
 /* Each Menu Category */
 #menu .col-md-4 {
   background: #fff;
-  /* background-color: #f2a625; */
+  /* background-color: #efb95a; */
+  /* background-color: antiquewhite; */
 
   padding: 20px;
   border-radius: 12px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s, box-shadow 0.3s;
   margin: 15px;
+  /* opacity: 1 !important;  */
 }
 
 /* Hover Effects for Each Category */
 #menu .col-md-4:hover {
   transform: translateY(-5px);
   box-shadow: 0 6px 15px rgba(0, 0, 0, 0.2);
+  background-color: antiquewhite;
+  opacity: 0.89;
+
 }
 
 /* Heading Colors for Each Category */
@@ -166,7 +179,8 @@ p.lead {
 
 /* Hover Effect on Menu Items */
 #menu .list-unstyled li:hover {
-  color: #007bff;
+  /* color: #007bff; */
+  color: #17a2b8
 }
 
 /* Add a subtle transition effect */
@@ -357,9 +371,11 @@ footer {
   background-color: #f9f3e5;
   padding: 30px;
   border-radius: 5px;
+  opacity: 0.8;
 }
 
-h2, h3 {
+h2,
+h3 {
   color: #444;
 }
 
@@ -373,6 +389,7 @@ p {
   background-color: #f9f9f9;
   padding: 30px;
   border-radius: 5px;
+  opacity: 0.9;
 
 }
 
