--- a/style.css
+++ b/style.css
@@ -10,13 +10,13 @@ body {
 /* Main Content */
 
 main {
-  /* background-color: #ffa405; */
+  background-color: #ffa405;
   padding: 20px;
   height: 100%;
   width: 100%;
   font-family: sans-serif;
   text-align: center;
-  background-image: url(240_F_1066053188_qJzLFH5MAex9UauCwthemWL2Lg8gwfE5.jpg);
+  /* background-image: url(240_F_1066053188_qJzLFH5MAex9UauCwthemWL2Lg8gwfE5.jpg); */
 }
 
 section {
@@ -27,22 +27,29 @@ section {
 /* welcome */
 /* Welcome Quote Styling */
 .container {
-  background: #f8f9fa;
-  /* background-color: #ffa405; */
+  /* background: #f8f9fa; */
+  background-color: black;
   padding: 30px;
   border-radius: 15px;
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
-  opacity: 0.7;
+  /* opacity: 0.7; */
+}
+.container h2{
+  color: #ffa405;
+}
+
+.container p{
+  color: #ff054c;
 }
 
 .container:hover {
   background: #f8f9face;
   /* background-color: #ffa305c1; */
-
-  padding: 30px;
-  border-radius: 15px;
-  box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
+  color: black;
+  /* opacity: 0.7; */
+  opacity: 0.85;
   border: 0.5px solid black;
+
 }
 
 h2 {
@@ -93,8 +100,10 @@ p.lead {
   padding: 50px 0;
   width: 100%;
   border-radius: 15px;
+  /* margin-top: -22%; */
+  /* border: 2px solid red; */
   /* opacity: 0.87;  */
-  opacity: 0.9;
+  /* opacity: 0.9; */
 }
 
 
@@ -104,7 +113,7 @@ p.lead {
   background-color: rgba(255, 0, 0);
   /* background-color: #ffa405; */
 
-  display: inline;
+  /* display: inline; */
 }
 
 #menu p {
@@ -121,10 +130,9 @@ p.lead {
 
 /* Each Menu Category */
 #menu .col-md-4 {
-  background: #fff;
+  /* background: #fff; */
   /* background-color: #efb95a; */
-  /* background-color: antiquewhite; */
-
+  background-color: black;
   padding: 20px;
   border-radius: 12px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -137,8 +145,8 @@ p.lead {
 #menu .col-md-4:hover {
   transform: translateY(-5px);
   box-shadow: 0 6px 15px rgba(0, 0, 0, 0.2);
-  background-color: antiquewhite;
-  opacity: 0.89;
+  /* background-color: antiquewhite; */
+  opacity: 0.95;
 
 }
 
@@ -172,7 +180,8 @@ p.lead {
 #menu .list-unstyled li {
   font-weight: 500;
   font-size: 18px;
-  color: #555;
+  /* color: #555; */
+  color: white;
   padding: 8px 0;
   transition: color 0.3s ease;
 }
@@ -180,7 +189,8 @@ p.lead {
 /* Hover Effect on Menu Items */
 #menu .list-unstyled li:hover {
   /* color: #007bff; */
-  color: #17a2b8
+  /* color: #17a2b8; */
+  color: #0ac5e2
 }
 
 /* Add a subtle transition effect */
@@ -203,27 +213,37 @@ p.lead {
 .order-section {
   padding: 40px 20px;
   /* text-align: center; */
-  background-color: #f8f9fa;
-  /* background-color: #f6ea81; */
-  border-top: 2px solid #ddd;
+  /* background-color: #f8f9fa; */
+  /* border-top: 2px solid #ddd; */
   border-radius: 10px;
+  background-color: #000000;
+  color: white;
+  border: 0.5px solid #000000; 
+
   /* width: fit-content; */
   /* margin-left: 23%; */
+  .btn{
+    background-color: #ffa405;
+    color: black;
+  }
 }
+
 /* Hover on Order now section */
 .order-section:hover {
   background: #f8f9face;
+  color: black;
   border-radius: 15px;
+  opacity: 0.9;
   .btn{
     background-color: #28a745;
   }
 }
 
 .order-section h2 {
+  color: #ffa405;
   font-size: 2.5rem;
   margin-bottom: 10px;
 }
-
 .order-section p {
   font-size: 1.2rem;
   margin-bottom: 20px;
@@ -238,12 +258,18 @@ p.lead {
   /* border: 0.5px solid #ccc;  */
   border: 0.5px solid #000000; 
   padding: 20px; 
-  background-color: antiquewhite; 
-  border-radius: 5px; opacity: 0.8;
+  /* background-color: antiquewhite;  */
+  border-radius: 5px;
+   /* opacity: 0.8; */
+  background-color: #000000;
+  color: white;
+}
+.gl h2{
+  color: #ffa405;
 }
 
 .gl:hover{
-  border: 1.2px solid #000000; 
+  /* border: 1.2px solid #000000;  */
   padding: 20px; 
   background-color: antiquewhite; 
   border-radius: 5px; opacity: 0.85;
@@ -273,22 +299,33 @@ p.lead {
 /* About us  */
 /* Optional: For visual clarity */
 #about-us {
-  background-color: #f9f3e5;
+  /* background-color: #f9f3e5; */
+  background-color: #000000;
   padding: 30px;
   border-radius: 10px;
-  opacity: 0.8;
+  /* opacity: 0.8; */
+  color: white;
 }
-#about-us:hover {
-  background-color: #f9f3e5b8;
-  padding: 30px;
-  border-radius: 15px;
-  opacity: 0.85;
+.about h2{
+  color: #ffa405;
+}
+.about h3{
+  color: #ffa405;
 }
 
-h2,
+#about-us:hover {
+  background-color: #f9f3e5b8;
+  /* background-color: #00000060; */
+  padding: 30px;
+  border-radius: 15px;
+  opacity: 0.9;
+  color: black;
+}
+
+/* h2,
 h3 {
   color: #444;
-}
+} */
 
 p {
   font-size: 16px;
@@ -297,11 +334,16 @@ p {
 
 /* Contact  */
 #contact {
-  background-color: #f9f9f9;
+  /* background-color: #f9f9f9; */
   padding: 30px;
   border-radius: 5px;
-  opacity: 0.9;
-
+  /* opacity: 0.9; */
+  background-color: #000000;
+  color: #ffa405;
+}
+#contact:hover {
+  background-color: #f9f9f9;
+  color: black;
 }
 
 a.text-primary {
