--- a/style.css
+++ b/style.css
@@ -342,7 +342,10 @@ p {
   color: #ffa405;
 }
 #contact:hover {
-  background-color: #f9f9f9;
+  /* background-color: #f9f9f9; */
+  background-color: #f9f3e5b8;
+
+
   color: black;
 }
 
@@ -394,14 +397,15 @@ a.text-primary {
 
 /* Footer */
 footer {
-  background-color: #212121;
+  /* background-color: #212121; */
+  background-color: #000000;
   color: #fff;
   text-align: center;
   padding: 15px;
   bottom: 0;
   width: 100%;
   height: 50px;
-  opacity: 0.5;
+  /* opacity: 0.5; */
   /* Start with transparency */
   transition: opacity 0.5s ease;
   /* Smooth transition for opacity */
@@ -465,6 +469,3 @@ footer {
 .my-4 {
   margin: 1.5rem 0;
 }
-
-
-
